Fix scrolling on same page, so content is not covered by fixed header

--- a/css/Header.css
+++ b/css/Header.css
@@ -1,3 +1,21 @@
+@media (min-width: 320px) {
+    :root {
+        --header-height: 73px;
+    }
+}
+
+@media (min-width: 375px) {
+    :root {
+        --header-height: 80px;
+    }
+}
+
+@media (min-width: 728px) {
+    :root {
+        --header-height: 96px;
+    }
+}
+
 .dsa-header-wrapper {
     background: var(--neutral-0);
     box-shadow: 0 1px 4px 0 #0000001a;
